[package]
name = "keyball-rust-firmware"
version = "0.1.0"
authors = ["nazo6 <git@nazo6.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "keyball-rust-firmware"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
atmega-usbd = { git = "https://github.com/agausmann/atmega-usbd" }
avr-device = { version = "0.5", features = ["atmega32u4"] }
usb-device = "0.2"
usbd-hid = "0.6"
usbd-serial = "0.1.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "45a37eb746d264166c3ea382fed323a204104998"
features = ["sparkfun-promicro"]
